# arknights-assets

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: download.rs  errors.rs  lib.rs  models.rs  progress.rs  server.rs  ui.rs
crates/unpacker/: Cargo.toml
crates/unpacker/src/: bundle.rs  extract.rs  lib.rs  lz4inv.rs
crates/unpacker/src/bundle/: block.rs  header.rs  mod.rs  read.rs  serialized.rs  typetree.rs
crates/unpacker/src/bundle/asset/: audio.rs  common.rs  mod.rs  mono.rs  sprite.rs  text.rs  texture.rs
