[workspace]
members = ["cli", "crates/downloader", "crates/unpacker"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.50", features = ["full"] }
futures = "0.3"
indicatif = "0.18"
zip = "8.2"
lz4_flex = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
