[package]
name = "ak-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
futures = { workspace = true }
