[package]
name = "ak-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
futures = { workspace = true }
indicatif = { workspace = true }
